@@ -1,3 +1,8 @@
+2006-09-25  Laurent Sansonetti  <lsansonetti@apple.com>
+
+	* src/lib/rbosa.rb:
+	Do not implicitly resolve 'reference'-typed objects.
+
 2006-09-17  Laurent Sansonetti  <lsansonetti@apple.com>
 
 	* TODO:
